Update Jenkins Pipeline.